test/tests/stages/9_functions/valid/libraries/system_call.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(putchar)
  (
  int
  identifier(c)
  )
  ;
  int
  identifier(incr_and_print)
  (
  int
  identifier(b)
  )
  {
  return
  identifier(putchar)
  (
  identifier(b)
  +
  const int(2)
  )
  ;
  }
