test/tests/stages/9_functions/invalid_types/multiple_function_definitions_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[38]:
  int
  identifier(foo)
  (
  void
  )
  {
  return
  const int(3)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(foo)
  (
  void
  )
  ;
  return
  identifier(foo)
  (
  )
  ;
  }
  int
  identifier(foo)
  (
  void
  )
  {
  return
  const int(4)
  ;
  }
